Desarrollo del curso.

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -33,7 +33,7 @@
                 src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
 
         <!-- Script de prueba -->
-        <script type="text/javascript" src="js/seccion-04.js" defer></script>
+        <script type="text/javascript" src="" defer></script>
     </body>
 
 </html>
