--- a/wwwroot/calculator.html
+++ b/wwwroot/calculator.html
@@ -20,25 +20,30 @@
                 el curso de "Introducción a la Programación con JavaScript".
             </p>
             <hr>
+            <p>La siguiente aplicación ha sido desarrollada con el Framework CSS de <a
+                   href="https://getbootstrap.com/">Bootstrap 5</a>.</p>
         </header>
 
-        <main class="container">
+        <main class="container mt-5">
             <div class="row">
-                <div id="calculator" class="col-4 offset-4"></div>
+                <div id="calculator" class="col-4 offset-4">
+                    <div class="card">
+                        <div class="card-header container">
+                            <div class="row mt-4 mb-4">
+                                <div class="col">
+                                    <input type="text" class="ea-result form-control fs-1 text-end" value="0" readonly>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-body container"></div>
+                    </div>
+                </div>
             </div>
         </main>
 
+        <!-- Plantillas de la aplicación -->
         <template id="tmp-calculator">
-            <div class="card">
-                <div class="card-header container">
-                    <div class="row mt-4 mb-4">
-                        <div class="col">
-                            <input type="text" class="ea-result form-control fs-1 text-end" value="0" readonly>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-body container"></div>
-            </div>
+
         </template>
 
         <template id="tmp-key">
@@ -52,7 +57,7 @@
                 src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
 
         <!-- Funcionalidad de la aplicación -->
-        <script type="text/javascript" src="" defer></script>
+        <script type="text/javascript" src="js/section-06/calculator.js" defer></script>
     </body>
 
 </html>
