--- a/wwwroot/calculator.html
+++ b/wwwroot/calculator.html
@@ -9,6 +9,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Introducción a la Programación con JavaScript</title>
         <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
+        <link rel="stylesheet" type="text/css"
+              href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" media="screen" preload>
         <link rel="stylesheet" type="text/css" href="./css/calculator.min.css" media="screen" preload>
     </head>
 
@@ -26,35 +28,23 @@
 
         <main class="container mt-5">
             <div class="row">
-                <div id="calculator" class="col-4 offset-4">
+                <div class="col-3">
                     <div class="card">
                         <div class="card-header container">
-                            <div class="row mt-4 mb-4">
+                            <div class="row mt-2 mb-2">
                                 <div class="col">
                                     <input type="text" class="ea-result form-control fs-1 text-end" value="0" readonly>
                                 </div>
                             </div>
                         </div>
-                        <div class="card-body container"></div>
+                        <div id="keyboard" class="card-body"></div>
                     </div>
                 </div>
             </div>
         </main>
 
-        <!-- Plantillas de la aplicación -->
-        <template id="tmp-calculator">
-
-        </template>
-
-        <template id="tmp-key">
-            <div class="col-3 d-grid">
-                <button type="button" class="btn"></button>
-            </div>
-        </template>
-
-        <!-- Bootstrap -->
-        <script type="text/javascript"
-                src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+        <!-- JQuery -->
+        <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js" defer></script>
 
         <!-- Funcionalidad de la aplicación -->
         <script type="text/javascript" src="js/section-06/calculator.js" defer></script>
