--- a/wwwroot/calculator.html
+++ b/wwwroot/calculator.html
@@ -10,7 +10,7 @@
         <title>Introducción a la Programación con JavaScript</title>
         <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
         <link rel="stylesheet" type="text/css"
-              href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" media="screen" preload>
+              href="../node_modules/bootstrap/dist/css/bootstrap.min.css" media="screen" preload>
         <link rel="stylesheet" type="text/css" href="./css/calculator.min.css" media="screen" preload>
     </head>
 
