Avance de la sección 6,

--- a/wwwroot/calculator.html
+++ b/wwwroot/calculator.html
@@ -15,31 +15,10 @@
     </head>
 
     <body>
-        <header class="container mt-5">
-            <h2>Sección 6: Desarrollo de una calculadora con HTML5 y JavaScript.</h2>
-            <p class="lead">
-                <strong>Objetivo de la sección:</strong> Poner en práctica los adquiridos en
-                el curso de "Introducción a la Programación con JavaScript".
-            </p>
-            <hr>
-            <p>La siguiente aplicación ha sido desarrollada con el Framework CSS de <a
-                   href="https://getbootstrap.com/">Bootstrap 5</a>.</p>
-        </header>
 
         <main class="container mt-5">
             <div class="row">
-                <div class="col-3">
-                    <div class="card">
-                        <div class="card-header container">
-                            <div class="row mt-2 mb-2">
-                                <div class="col">
-                                    <input type="text" class="ea-result form-control fs-1 text-end" value="0" readonly>
-                                </div>
-                            </div>
-                        </div>
-                        <div id="keyboard" class="card-body"></div>
-                    </div>
-                </div>
+                <div class="col-sm-12 col-md-3 offset-md-4"></div>
             </div>
         </main>
 
