--- a/06-app-calculadora/public/app.html
+++ b/06-app-calculadora/public/app.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" data-bs-theme="dark">
 
     <head>
         <meta charset="UTF-8">
-        <meta name="author" content="I.S.C. Eric A. Rodríguez S.">
+        <meta name="author" content="Eric Adalberto Rodríguez Sánchez">
         <meta name="description"
               content="Ejercicios desarrollados en el curso de introducción a la programación en JavaScript por Grover Vásquez.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Introducción a la Programación con JavaScript</title>
         <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
         <link rel="stylesheet" type="text/css"
-              href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" media="screen" preload>
+              href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+              integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"
+              media="screen" preload>
         <link rel="stylesheet" type="text/css" href="./css/app.css" media="screen" preload>
     </head>
 
     <body>
         <main class="container mt-5">
             <div class="row">
-                <div class="col-sm-12 col-md-3 offset-md-4"/>
+                <div class="col-sm-12 col-md-3 offset-md-4"></div>
             </div>
         </main>
         <!-- jQuery -->
